fix: tmux is crashing when using osc52, temporarily disable

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -71,7 +71,13 @@ set -g mouse on
 unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -selection c'
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+
+# TODO: osc52 is causing tmux to crash
+# maybe related? https://github.com/tmux/tmux/issues/3068
+# to reproduce: printf "\033]52;c;$(printf "%s" "blabla" | base64)\a" inside tmux
+# set -s set-clipboard on
+# bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
