fix(tmux): actually disable set-clipboard

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -76,6 +76,7 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 # TODO: osc52 is causing tmux to crash
 # maybe related? https://github.com/tmux/tmux/issues/3068
 # to reproduce: printf "\033]52;c;$(printf "%s" "blabla" | base64)\a" inside tmux
+set -s set-clipboard off
 # set -s set-clipboard on
 # bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
