--- a/.gitmodules
+++ b/.gitmodules
@@ -471,3 +471,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/flash.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/flash.nvim
 	url = git@github.com:folke/flash.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/nvim-notify"]
+	path = home/.local/share/nvim/site/pack/default/start/nvim-notify
+	url = git@github.com:rcarriga/nvim-notify.git
