--- a/.gitmodules
+++ b/.gitmodules
@@ -474,3 +474,9 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/nvim-notify"]
 	path = home/.local/share/nvim/site/pack/default/start/nvim-notify
 	url = git@github.com:rcarriga/nvim-notify.git
+[submodule "home/.local/share/nvim/site/pack/default/start/noice.nvim"]
+	path = home/.local/share/nvim/site/pack/default/start/noice.nvim
+	url = git@github.com:folke/noice.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/nui.nvim"]
+	path = home/.local/share/nvim/site/pack/default/start/nui.nvim
+	url = git@github.com:MunifTanjim/nui.nvim.git
