--- a/.gitmodules
+++ b/.gitmodules
@@ -476,3 +476,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/nui.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/nui.nvim
 	url = git@github.com:MunifTanjim/nui.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/nvim-autopairs"]
+	path = home/.local/share/nvim/site/pack/default/start/nvim-autopairs
+	url = git@github.com:windwp/nvim-autopairs.git
