feat(ci): test neovim for error output

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,3 +45,8 @@ jobs:
           # stow conflicts
           rm ~/.bashrc ~/.bash_profile
           make install
+      - name: test neovim
+        # make sure neovim doesn't output errors
+        run: |
+          OUTPUT=$(nvim --headless +qa 2>&1)
+          [[ -z "$OUTPUT" ]] && exit 0 || exit 1
