--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ home/.config/coc/extensions/*
 home/.local/share/nvim/view/
 home/.local/share/nvim/undo/
 home/.local/share/nvim/shada/
+home/.local/share/nvim/project_nvim/
 
 home/.gnupg/*
 !home/.gnupg/gpg-agent.conf
