--- a/.gitmodules
+++ b/.gitmodules
@@ -479,3 +479,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/workspaces.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/workspaces.nvim
 	url = git@github.com:natecraddock/workspaces.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/nvim-tree"]
+	path = home/.local/share/nvim/site/pack/default/start/nvim-tree
+	url = git@github.com:nvim-tree/nvim-tree.lua.git
