--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ home/.local/share/nvim/view/
 home/.local/share/nvim/undo/
 home/.local/share/nvim/shada/
 home/.local/share/nvim/workspaces
+home/.local/share/nvim/project_nvim/
 
 home/.gnupg/*
 !home/.gnupg/gpg-agent.conf
