--- a/.gitmodules
+++ b/.gitmodules
@@ -485,3 +485,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/persistence.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/persistence.nvim
 	url = git@github.com:folke/persistence.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/telescope-git-grep.nvim"]
+	path = home/.local/share/nvim/site/pack/default/start/telescope-git-grep.nvim
+	url = git@github.com:davvid/telescope-git-grep.nvim.git
