--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -28,7 +28,7 @@
   delete-merged-branches = !git branch --merged | grep -v \\* | xargs -I % git branch -d %
   delete-branches-not-in-remote = !"git fetch -p && for branch in $(git for-each-ref --format '%(refname) %(upstream:track)' refs/heads | awk '$2 == \"[gone]\" {sub(\"refs/heads/\", \"\", $1); print $1}'); do git branch -D $branch; done"
 [push]
-  default = simple
+  default = current
 [include]
   path = ~/.gitconfig.overrides # local overrides for email, name, signingkey, etc
 [pull]
