--- a/.gitmodules
+++ b/.gitmodules
@@ -482,3 +482,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/typescript-tools.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/typescript-tools.nvim
 	url = git@github.com:pmizio/typescript-tools.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/nvim-cokeline"]
+	path = home/.local/share/nvim/site/pack/default/start/nvim-cokeline
+	url = git@github.com:willothy/nvim-cokeline.git
