--- a/.gitmodules
+++ b/.gitmodules
@@ -497,3 +497,9 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/lsp-format.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/lsp-format.nvim
 	url = git@github.com:lukas-reineke/lsp-format.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/cmp-git"]
+	path = home/.local/share/nvim/site/pack/default/start/cmp-git
+	url = git@github.com:petertriho/cmp-git.git
+[submodule "home/.local/share/nvim/site/pack/default/start/cmp-cmdline"]
+	path = home/.local/share/nvim/site/pack/default/start/cmp-cmdline
+	url = git@github.com:hrsh7th/cmp-cmdline.git
