--- a/.gitmodules
+++ b/.gitmodules
@@ -503,3 +503,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/cmp-cmdline"]
 	path = home/.local/share/nvim/site/pack/default/start/cmp-cmdline
 	url = git@github.com:hrsh7th/cmp-cmdline.git
+[submodule "home/.local/share/nvim/site/pack/default/start/vim-illuminate"]
+	path = home/.local/share/nvim/site/pack/default/start/vim-illuminate
+	url = git@github.com:RRethy/vim-illuminate.git
