--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,11 @@ jobs:
       - name: deps
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: stow libglib2.0-dev libmpv-dev dbus-x11 dconf-cli ninja-build
+          packages: stow libglib2.0-dev libmpv-dev dbus-x11 dconf-cli ninja-build yq
           # libglib2.0-dev libmpv-dev - mpv-mpris
           # dbus-x11 dconf-cli - ibus
           # ninja-build - lua-language-server
+          # yq - mason-registry https://github.com/williamboman/mason.nvim/pull/1457
           version: 1.0
       - name: neovim
         uses: rhysd/action-setup-vim@v1
