feat(neovim): add mason-registry as a git submodule (#2415)
* feat(neovim): add mason-registry as a git submodule

* fix

* break up mason dependencies

* remove unnecessary registry-refresh command

* factor out mason function

* formatting

* update branch

* use vim.fs.joinpath

* fix

* use main branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,11 +23,14 @@ jobs:
           # libglib2.0-dev libmpv-dev - mpv-mpris
           # dbus-x11 dconf-cli - ibus
           version: 1.0
+      - name: yq # needed for the mason registry to work locally (https://github.com/williamboman/mason.nvim/pull/1457)
+        uses: mikefarah/yq@master
       - name: neovim
         uses: rhysd/action-setup-vim@v1
         with:
           # apt neovim is too old
           neovim: true
+          version: nightly # using vim.fs.joinpath
       - name: deps - llvm # ccls dep
         uses: KyleMayes/install-llvm-action@v1
         with:
