--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
       - name: deps
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: stow libglib2.0-dev libmpv-dev dbus-x11 dconf-cli
-          # libglib2.0-dev libmpv-dev - mpv-mpris
+          packages: stow libglib2.0-dev libmpv-dev dbus-x11 dconf-cli libavformat-dev
+          # libglib2.0-dev libmpv-dev libavformat-dev - mpv-mpris
           # dbus-x11 dconf-cli - ibus
           version: 1.0
       - name: yq # needed for the mason registry to work locally (https://github.com/williamboman/mason.nvim/pull/1457)
