--- a/.gitmodules
+++ b/.gitmodules
@@ -506,3 +506,6 @@
 [submodule "home/.local/share/nvim/mason-registry"]
 	path = home/.local/share/nvim/mason-registry
 	url = git@github.com:mason-org/mason-registry.git
+[submodule "home/.local/share/nvim/site/pack/default/start/wf.nvim"]
+	path = home/.local/share/nvim/site/pack/default/start/wf.nvim
+	url = git@github.com:Cassin01/wf.nvim.git
