--- a/.gitmodules
+++ b/.gitmodules
@@ -482,15 +482,9 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/mason-lspconfig.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/mason-lspconfig.nvim
 	url = git@github.com:williamboman/mason-lspconfig.nvim.git
-[submodule "home/.local/share/nvim/site/pack/default/start/formatter.nvim"]
-	path = home/.local/share/nvim/site/pack/default/start/formatter.nvim
-	url = git@github.com:mhartington/formatter.nvim.git
 [submodule "home/.local/share/nvim/site/pack/default/start/nvim-lint"]
 	path = home/.local/share/nvim/site/pack/default/start/nvim-lint
 	url = git@github.com:mfussenegger/nvim-lint.git
-[submodule "home/.local/share/nvim/site/pack/default/start/lsp-format.nvim"]
-	path = home/.local/share/nvim/site/pack/default/start/lsp-format.nvim
-	url = git@github.com:lukas-reineke/lsp-format.nvim.git
 [submodule "home/.local/share/nvim/site/pack/default/start/cmp-git"]
 	path = home/.local/share/nvim/site/pack/default/start/cmp-git
 	url = git@github.com:petertriho/cmp-git.git
@@ -509,3 +503,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/alpha-nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/alpha-nvim
 	url = git@github.com:goolord/alpha-nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/conform.nvim"]
+	path = home/.local/share/nvim/site/pack/default/start/conform.nvim
+	url = git@github.com:stevearc/conform.nvim.git
