--- a/.gitmodules
+++ b/.gitmodules
@@ -506,3 +506,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/conform.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/conform.nvim
 	url = git@github.com:stevearc/conform.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/nvim-lightbulb"]
+	path = home/.local/share/nvim/site/pack/default/start/nvim-lightbulb
+	url = git@github.com:kosayoda/nvim-lightbulb.git
