--- a/.gitmodules
+++ b/.gitmodules
@@ -512,3 +512,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/nvim-treesitter-endwise"]
 	path = home/.local/share/nvim/site/pack/default/start/nvim-treesitter-endwise
 	url = git@github.com:RRethy/nvim-treesitter-endwise.git
+[submodule "home/.local/share/nvim/site/pack/default/start/one-small-step-for-vimkind"]
+	path = home/.local/share/nvim/site/pack/default/start/one-small-step-for-vimkind
+	url = git@github.com:jbyuki/one-small-step-for-vimkind.git
