--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ home/.local/share/qutebrowser/
 !home/.local/share/qutebrowser/greasemonkey
 
 home/.local/share/fonts/NerdFontsSymbolsOnly/
+home/.local/share/fonts/Iosevka.ttc
 
 home/.config/fcitx5/conf/*
 !home/.config/fcitx5/conf/xcb.conf
