--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ home/.config/qutebrowser/qsettings
 home/.local/share/qutebrowser/
 !home/.local/share/qutebrowser/greasemonkey
 
+home/.local/share/fonts/NerdFontsSymbolsOnly-3.2.0.tar.xz
 home/.local/share/fonts/NerdFontsSymbolsOnly/
 home/.local/share/fonts/SuperTTC-Iosevka-29.0.5.zip
 home/.local/share/fonts/Iosevka.ttc
