--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18.x
+      - name: debug
+        run: |
+          make tree-sitter-cli
+          make home
+          make tree-sitter-cli
       - name: build
         run: make
       - name: install
