--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,13 +41,14 @@ jobs:
           node-version: 20.x
       - name: build
         run: make
+      - name: test build
+        run:  make test-build
       - name: install
         run: |
           export $(dbus-launch) # dconf required dbus
           # stow conflicts
           rm ~/.bashrc ~/.bash_profile
           make install
-      - name: test neovim
+      - name: test
         # make sure neovim doesn't output errors
-        run: |
-          [[ -z "$(nvim --headless +qa 2>&1)" ]] || exit 1
+        run: make test
