--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,19 +41,27 @@ jobs:
           node-version: 20.x
       - name: debug
         run: |
+            echo "finding out rtp"
+            HOME=./home nvim -c "echo &rtp" +qa
             HOME=./home nvim --startuptime foo +qa
             cat foo
+            rm ~/.bashrc ~/.bash_profile
+            make home
+            echo "finding out rtp2"
+            HOME=./home nvim -c "echo &rtp" +qa
+            echo "finding out rtp3"
+            nvim -c "echo &rtp" +qa
             HOME=./home nvim --startuptime bar --headless -c "MasonInstall $1" -c q
             cat bar
-      - name: build
-        run: make
-      - name: test build
-        run:  make test-build
-      - name: install
-        run: |
-          export $(dbus-launch) # dconf required dbus
-          # stow conflicts
-          rm ~/.bashrc ~/.bash_profile
-          make install
-      - name: test
-        run: make test
+      # - name: build
+      #   run: make
+      # - name: test build
+      #   run:  make test-build
+      # - name: install
+      #   run: |
+      #     export $(dbus-launch) # dconf required dbus
+      #     # stow conflicts
+      #     rm ~/.bashrc ~/.bash_profile
+      #     make install
+      # - name: test
+      #   run: make test
