--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,34 +39,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-      - name: debug
+      - name: build
+        run: make
+      - name: test build
+        run:  make test-build
+      - name: install
         run: |
-            echo "finding out rtp"
-            pwd
-            ls -lah
-            HOME=./home nvim --headless -c "echo &rtp" +qa
-            nvim --headless -c "echo &rtp" +qa
-            HOME=./home nvim --headless -c "echo &rtp" +qa
-
-            HOME=./home nvim --startuptime foo +qa
-            cat foo
-            rm ~/.bashrc ~/.bash_profile
-            make home
-            echo "finding out rtp2"
-            HOME=./home nvim --headless -c "echo &rtp" +qa
-            echo "finding out rtp3"
-            nvim --headless -c "echo &rtp" +qa
-            HOME=./home nvim --startuptime bar --headless -c "MasonInstall $1" -c q
-            cat bar
-      # - name: build
-      #   run: make
-      # - name: test build
-      #   run:  make test-build
-      # - name: install
-      #   run: |
-      #     export $(dbus-launch) # dconf required dbus
-      #     # stow conflicts
-      #     rm ~/.bashrc ~/.bash_profile
-      #     make install
-      # - name: test
-      #   run: make test
+          export $(dbus-launch) # dconf required dbus
+          # stow conflicts
+          rm ~/.bashrc ~/.bash_profile
+          make install
+      - name: test
+        run: make test
