feat(mason): add tree-sitter-cli (#3592)
* fix(tree-sitter): latex parser requires tree-sitter-cli

* fix

* fix

* fix

* debug

* debug

* oops

* debug

* attempt fix

* debug

* meh

* refactor

* fix

* debug

* debug

* debug

* debug

* fix

* remove debug

* why

* oops

* debug

* debug

* attempt fix

* add tests

* fix

* debug

* debug

* oopsie

* debug

* debug

* debug

* debug

* debug

* debug

* debug

* debug

* debug

* debug

* debug

* add tree-sitter-cli

* fix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,13 +41,13 @@ jobs:
           node-version: 20.x
       - name: build
         run: make
+      - name: test build
+        run:  make test-build
       - name: install
         run: |
           export $(dbus-launch) # dconf required dbus
           # stow conflicts
           rm ~/.bashrc ~/.bash_profile
           make install
-      - name: test neovim
-        # make sure neovim doesn't output errors
-        run: |
-          [[ -z "$(nvim --headless +qa 2>&1)" ]] || exit 1
+      - name: test
+        run: make test
