chore: add gpg settings

--- a/home/.gnupg/scdaemon.conf
+++ b/home/.gnupg/scdaemon.conf
@@ -5,3 +5,8 @@
 
 # 2.2 falls back to PC/SC if it can't use the reader via USB.
 disable-ccid
+
+# ykman may fail to access the oath credentials on the device if scdaemon
+# has already taken exclusive control of the device
+# https://wiki.archlinux.org/title/YubiKey#Error:_Failed_connecting_to_YubiKey_5_[OTP+FIDO+CCID]._Make_sure_the_application_have_the_required_permissions.
+# reader-port Yubico Yubi
