--- a/.gitmodules
+++ b/.gitmodules
@@ -525,3 +525,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/numb.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/numb.nvim
 	url = git@github.com:nacro90/numb.nvim.git
+[submodule "home/.local/share/nvim/site/pack/default/start/oil.nvim"]
+	path = home/.local/share/nvim/site/pack/default/start/oil.nvim
+	url = git@github.com:stevearc/oil.nvim.git
