--- a/.gitmodules
+++ b/.gitmodules
@@ -461,9 +461,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/rainbow-delimiters.nvim"]
 	path = home/.local/share/nvim/site/pack/default/start/rainbow-delimiters.nvim
 	url = git@github.com:HiPhish/rainbow-delimiters.nvim.git
-[submodule "home/.local/share/nvim/site/pack/default/start/typescript-tools.nvim"]
-	path = home/.local/share/nvim/site/pack/default/start/typescript-tools.nvim
-	url = git@github.com:pmizio/typescript-tools.nvim.git
 [submodule "home/.local/share/nvim/site/pack/default/start/nvim-cokeline"]
 	path = home/.local/share/nvim/site/pack/default/start/nvim-cokeline
 	url = git@github.com:willothy/nvim-cokeline.git
@@ -531,3 +528,6 @@
 [submodule "home/.local/share/nvim/site/pack/default/start/luvit-meta"]
 	path = home/.local/share/nvim/site/pack/default/opt/luvit-meta
 	url = git@github.com:Bilal2453/luvit-meta.git
+[submodule "home/.local/share/nvim/site/pack/default/opt/nvim-vtsls"]
+	path = home/.local/share/nvim/site/pack/default/opt/nvim-vtsls
+	url = git@github.com:yioneko/nvim-vtsls.git
