feat(pipewire): support log output in slackware

--- a/home/.config/pipewire/pipewire.conf.d/10-simultaneous-output.conf
+++ b/home/.config/pipewire/pipewire.conf.d/10-simultaneous-output.conf
@@ -3,10 +3,10 @@ context.modules = [
     args = {
         combine.mode = sink
         node.name = "combine_sink"
-        node.description = "Simultaneous Output"
+        node.description = "My Combine Sink"
         combine.latency-compensate = false
         combine.props = {
-            audio.position = [ FL FR FC LFE SL SR ]
+            audio.position = [ FL FR ]
         }
         stream.props = {
         }
@@ -23,8 +23,8 @@ context.modules = [
                 ]
                 actions = {
                     create-stream = {
-                        combine.audio.position = [ FL FR FC LFE SL SR ]
-                        audio.position = [ FL FR FC LFE SL SR ]
+                        #combine.audio.position = [ FL FR ]
+                        #audio.position = [ FL FR ]
                     }
                 }
             }
