--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ home/.local/share/fonts/NerdFontsSymbolsOnly-3.2.1.tar.xz
 home/.local/share/fonts/NerdFontsSymbolsOnly/
 home/.local/share/fonts/SuperTTC-Iosevka-31.7.1.zip
 home/.local/share/fonts/Iosevka.ttc
+# this is some weird fc-cache behavior?
+# https://stackoverflow.com/questions/62309818/autogenerating-uuid-files-in-linux-directory
+home/.local/share/fonts/**/.uuid
 
 home/.config/fcitx5/conf/*
 !home/.config/fcitx5/conf/xcb.conf
